--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -20,3 +20,12 @@ quarkus.s3.devservices.buckets=customers-profile-photos
 quarkus.rest-client.stable-diffusion-api.url=http://localhost:7860
 quarkus.rest-client.stable-diffusion-api.scope=javax.inject.Singleton
 quarkus.rest-client.read-timeout=120000
+
+quarkus.http.cors=true
+quarkus.http.cors.origins=http://localhost:3000
+quarkus.http.cors.methods=GET, POST, PUT, DELETE
+quarkus.http.cors.headers=accept, authorization, content-type, x-requested-with
+quarkus.http.cors.credentials=true
+quarkus.http.cors.exposed-headers=Content-Disposition
+quarkus.http.cors.access-control-max-age=24H
+quarkus.http.cors.access-control-allow-credentials=true
