finalizando projeto corrigindo erro dos cors

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -29,3 +29,21 @@ quarkus.http.cors.credentials=true
 quarkus.http.cors.exposed-headers=Content-Disposition
 quarkus.http.cors.access-control-max-age=24H
 quarkus.http.cors.access-control-allow-credentials=true
+
+# Configuração de autenticação JDBC
+quarkus.security.jdbc.principal-query.sql=SELECT password FROM users WHERE username = ?
+quarkus.security.jdbc.principal-query.password-mapper.bcrypt=true
+quarkus.security.jdbc.roles-query.sql=SELECT role FROM roles WHERE username = ?
+
+# Configuração do Kafka
+mp.messaging.outgoing.password-reset.connector=smallrye-kafka
+mp.messaging.outgoing.password-reset.topic=password-reset
+mp.messaging.outgoing.password-reset.bootstrap.servers=localhost:9094
+mp.messaging.outgoing.password-reset.value.serializer=org.apache.kafka.common.serialization.StringSerializer
+
+# Configuração do Mail
+quarkus.mailer.host=smtp.gmail.com
+quarkus.mailer.port=587
+quarkus.mailer.username=dreamforgenoreply@gmail.com
+quarkus.mailer.password=77
+quarkus.mailer.tls=true
